# CareerPilot-AI---Multi-Agent-Career-Mentor

./: README.md  api.py  careerpilot.db  package-lock.json  pyproject.toml  render.yaml  run_app.py
frontend/: index.html  package-lock.json  tailwind.config.js
frontend/src/: App.tsx  index.css
src/careerpilot_ai___multi_agent_career_mentor/: crew.py  database.py  main.py  models.py
src/careerpilot_ai___multi_agent_career_mentor/config/: agents.yaml  tasks.yaml
